--- a/src/scss/files/checkbox_and_radio/_normal.scss
+++ b/src/scss/files/checkbox_and_radio/_normal.scss
@@ -106,6 +106,7 @@
 		opacity: 0.7;
 		width: 220%;
 		height: 220%;
+		z-index: 1;
 	}
 }
 
