--- a/src/scss/files/checkbox_and_radio/_slider.scss
+++ b/src/scss/files/checkbox_and_radio/_slider.scss
@@ -159,6 +159,7 @@
 		opacity: 0.7;
 		width: 220%;
 		height: 220%;
+		z-index: 1;
 	}
 }
 
@@ -173,6 +174,7 @@
 		opacity: 0.7;
 		width: 440%;
 		height: 440%;
+		z-index: 1;
 	}
 }
 
